# logga-helper

./: .gitignore  Cargo.toml  Makefile  README.md  com.logga.helper.plist  config.yaml  test_config.mobileconfig
src/: configuration.rs  flags.rs  lib.rs  main.rs  s3_client.rs  watcher.rs
src/forwarder/: error.rs  file.rs  mod.rs  network.rs  tail.rs
src/uploader/: mod.rs  s3_client.rs  watcher.rs
